--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PS - Building Applications with React and Redux</title>
+    <title>P3176 - PS - Building Applications with React and Redux</title>
 </head>
 
 <body>
